Fixed Hero image flexboxes
Added some flex prperties so the image shrinks responsively and doesn't cut off the text

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ a{
     margin: 100px 100px 100px 100px;
     flex: none;
     gap: 16px;
+    
 }
 
 .hero-img{
@@ -61,9 +62,11 @@ a{
 }
 /* Getting the hero image smaller to fit in the container */
 .hero img{
-    max-width: 25%;
+    max-width: 400px; /*Sets upper limit */
+    width: 100%; /*can scale down naturally */
     height: auto;
     object-fit: contain;
+    flex: 1 1 300px; /* Image takes at least 300px before wrapping */
 
 }
 
@@ -72,14 +75,27 @@ a{
     flex-direction: column;
     /* flex:auto;
     max-width: 25%; */
-    margin-top: 100px;
-    margin-bottom: 100px;
+    /* margin-top: 100px;
+    margin-bottom: 100px; REmove to add padding*/
+    padding: 20px 0;
+    flex: 2;
+    min-width: 250px;
 }
 
 /* Ensure that the hero text and hero img stay equal and equal shar eof space */
-.hero-text, .hero img{
+.hero-text {
+    flex: 1 1 300px;
+    max-width: 500px;
+}
+
+/* Keeps image resonable but not forcing layout break */
+.hero img{
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    object-fit: contain;
     flex: 1;
-    max-width: 50%;
+    min-width: 200px; /* Keeps picture small but allows text to not be cut off */
 }
 
 .hero-text h2{
